--- a/DemoBlazorWithCRUD/DemoBlazorWithCRUD/appsettings.Development.json
+++ b/DemoBlazorWithCRUD/DemoBlazorWithCRUD/appsettings.Development.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB; Database=DemoBlazorWithCRUDOperationsDb; Trusted_Connection=true; Trust Server Certificate=true;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -6,3 +9,5 @@
     }
   }
 }
+
+
